add css for headings and logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Joan&family=Lato:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Joan&family=Lato&display=swap');
 
 * {
     margin: 0;
@@ -7,6 +7,19 @@
 }
 
 body {
-    font-family: Joan;
-    font-weight: 300;
+    font-family: Lato, sans-serif;
+    font-weight: 400;
+    color: gray;
+}
+
+h1, h2 {
+    font-family: Joan, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: black;
+}
+
+#logo {
+    float: left;
+    font-size: 300%;
 }
