--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,12 @@ h1, h2 {
     border-bottom: 2px solid black;
 }
 
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+
 #hero-image {
     height: 600px;
     width: 100%;
