--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,7 @@ h1, h2 {
     right: 150px;
     position: absolute;
     left: 27%;
+    bottom: 10%;
 }
 
 #cover-text h2 {
@@ -98,7 +99,7 @@ h1, h2 {
     padding-top: 0;
     width: 33%;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 #pyramid {
@@ -130,4 +131,12 @@ h1, h2 {
     border-top: 1px solid black;
     width: 100%;
     margin: 5p;
+}
+
+section > h1 {
+    padding-left: 39%;
+}
+
+section > div > div > h2 {
+    text-transform: capitalize;
 }
