--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,13 +129,7 @@ h1, h2 {
     margin-top: 30px;
 }
 
-div > div > hr {
-    border-top: 1px solid black;
-    width: 100%;
-    margin: 5p;
-}
-
-div > a > div > hr {
+.sites-h2-underline {
     border-top: 1px solid black;
     width: 100%;
     margin: 5p;
@@ -176,12 +170,37 @@ section > div > div > h2 {
 
 .signup-form {
     margin: 0 auto;
-    color: #fff;
-    width: 500px;
-    height: 100px;
+    color: black;
+    width: 550px;
     padding-top: 100px;
+    padding-left: 10px;
 }
 
 .signup-form > h2 {
+    color: black;
+}
+
+.submit-button {
     color: white;
+    border: 1px solid white;
+    background-color: black;
+}
+
+.submit-button:hover {
+    background-color: white;
+    color: black;
+    border-color: black;
+}
+
+.text-input {
+    border: 1px solid white;
+    color: white;
+    border-color: white;
+    background-color: black;
+}
+
+.text-input:hover {
+    color: black;
+    border-color: black;
+    background-color: white;
 }
