--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,17 +75,19 @@ h1, h2 {
     width: 850px;
     height: 150px;
     padding-top: 20px;
-    padding-left: 30px;
     background-color: rgba(139, 69, 19, .7);
-    bottom: 30px;
-    right: 150px;
+    bottom: 50px;
     position: absolute;
-    left: 27%;
-    bottom: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
 #cover-text h2 {
-    padding-left: 220px;
+    
+    text-align: center;
 }
 
 #sites-ethos {
@@ -98,6 +100,7 @@ h1, h2 {
     text-transform: none;
     font-size: x-large;
     color: black;
+    text-align: center;
 }
 
 #stonehenge {
@@ -136,10 +139,6 @@ h1, h2 {
     border-top: 1px solid black;
     width: 100%;
     margin: 5p;
-}
-
-section > h2 {
-    padding-left: 39%;
 }
 
 section > div > div > h2 {
