position email text, text box and submit button further right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,10 @@ section > div > div > h2 {
     background-color: white;
 }
 
+.email-field {
+    margin-left: 10px;
+}
+
 footer {
     height: 60px;
     background-color: black;
