in css change most px to %, change site ethos background image to a plain color and change color to hex code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,24 +6,26 @@
     border: none;
 }
 
+/* this css styles all text in the body and background color of the whole page */
 body {
     font-family: Lato, sans-serif;
     font-weight: 400;
-    color: white;
-    background-color: black;
+    color: #FFFFFF;
+    background-color: 	#000000;
 }
 
+/* this css styles all h1 and h2 elements */
 h1, h2 {
     font-family: Joan, sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: white;
+    color: #FFFFFF;
 }
 
 #logo {
     float: left;
     font-size: 300%;
-    margin-left: 20px;
+    margin-left: 1%;
 }
 
 #menu {
@@ -32,13 +34,13 @@ h1, h2 {
 }
 
 #menu, #logo {
-    line-height: 80px;
+    line-height: 150%;
 }
 
 #menu li {
     float: right;
     list-style-type: none;
-    margin-right: 20px;
+    margin-right: 1%;
 }
 
 #menu a {
@@ -47,9 +49,11 @@ h1, h2 {
 }
 
 #menu a:hover {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid 	#FFFFFF;
 }
 
+
+/* this css styles the hero image so it is pushed below the h1 and menu */
 #hero-outer {
     height: 600px;
     width: 100%;
@@ -58,25 +62,26 @@ h1, h2 {
 }
 
 #cover-text, #cover-text h2 {
-    color: white;
+    color: #FFFFFF;
 }
 
 #hero-image {
-    height: 600px;
+    height: 100%;
     width: 100%;
     background: url(../images/hero-image.jpg) no-repeat center center;
 }
 
+/* this css styles the see-through text box on the hero image */
 #cover-text {
     font-size: 150%;
     font-family: Joan, sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
-    width: 850px;
-    height: 150px;
-    padding-top: 20px;
+    width: 50%;
+    height: 24%;
+    padding-top: 1%;
     background-color: rgba(139, 69, 19, .7);
-    bottom: 50px;
+    bottom: 10%;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
@@ -86,57 +91,30 @@ h1, h2 {
 }
 
 #cover-text h2 {
-    
     text-align: center;
 }
 
-#sites-ethos {
-    height: 1233px;
-    background-image: url(../images/background-image.jpg);
-    color: black;
+#site-ethos {
+    background-color: #9E7147;
+    color: 	#000000;
 }
 
-#sites-ethos h2 {
+/* this css styles all h2 elements in the site section */
+#site-ethos h2 {
     text-transform: none;
     font-size: x-large;
-    color: black;
+    color: 	#000000;
     text-align: center;
 }
 
-#stonehenge {
-    padding-top: 0;
+.site-information {
     width: 33%;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 2%;
 }
 
-#pyramid {
-    padding-top: 0;
-    width: 33%;
-    margin: 0 auto;
-    margin-top: 30px;
-}
-
-#colosseum {
-    width: 33%;
-    margin: 0 auto;
-    margin-top: 30px;
-}
-
-#terracotta {
-    width: 33%;
-    margin: 0 auto;
-    margin-top: 30px;
-}
-
-#easter {
-    width: 33%;
-    margin: 0 auto;
-    margin-top: 30px;
-}
-
-.sites-h2-underline {
-    border-top: 1px solid black;
+.site-h2-underline {
+    border-top: 1px solid 	#000000;
     width: 100%;
 }
 
@@ -144,14 +122,14 @@ section > div > div > h2 {
     text-transform: capitalize;
 }
 
-#pyramid-img {
+#pyramid-image {
     position: absolute;
     left: 0px;
     top: 825px
     
 }
 
-#colosseum-img {
+#colosseum-image {
     position: absolute;
     right: 0px;
     top: 1000px
@@ -169,51 +147,56 @@ section > div > div > h2 {
     top: 1413px
 }
 
+#form-section {
+    background-color: #9E7147;
+}
+
+/* this css styles the sign up form */
 .signup-form {
-    margin: 0 auto;
-    color: black;
+    margin: auto;
+    color: 	#000000;
     font-size: large;
-    width: 550px;
-    padding-top: 100px;
-    padding-left: 10px;
+    width: 50%;
+    padding-top: 10%;
 }
 
 .signup-form > h2 {
-    color: black;
+    color: 	#000000;
 }
 
 .submit-button {
-    color: white;
-    border: 1px solid white;
-    background-color: black;
+    color: 	#FFFFFF;
+    border: 1px solid 	#FFFFFF;
+    background-color: 	#000000;
 }
 
 .submit-button:hover {
-    background-color: white;
-    color: black;
-    border-color: black;
+    background-color: 	#FFFFFF;
+    color: 	#000000;
+    border-color: 	#000000;
 }
 
+/* this css styles the text input */
 .text-input {
-    border: 1px solid white;
-    color: white;
-    border-color: white;
-    background-color: black;
+    border: 1px solid 	#FFFFFF;
+    color: 	#FFFFFF;
+    border-color: 	#FFFFFF;
+    background-color: 	#000000;
 }
 
 .text-input:hover {
-    color: black;
-    border-color: black;
-    background-color: white;
+    color: 	#000000;
+    border-color: 	#000000;
+    background-color: 	#FFFFFF;
 }
 
 .email-field {
-    margin-left: 10px;
+    margin-left: 0;
 }
 
 footer {
     height: 60px;
-    background-color: black;
+    background-color: 	#000000;
 }
 
 footer > ul > li {
@@ -221,7 +204,7 @@ footer > ul > li {
 }
 
 .social-media {
-    color: white;
+    color: 	#FFFFFF;
     font-size: 50px;
     margin: 15%;
 }
