--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,8 @@ h1, h2 {
     color: 	#FFFFFF;
     border: 1px solid 	#FFFFFF;
     background-color: 	#000000;
+    height: 25px;
+    width: 14%;
 }
 
 .submit-button:hover {
@@ -177,16 +179,13 @@ h1, h2 {
     color: 	#FFFFFF;
     border-color: 	#FFFFFF;
     background-color: 	#000000;
+    height: 23px;
 }
 
 .text-input:hover {
     color: 	#000000;
     border-color: 	#000000;
     background-color: 	#FFFFFF;
-}
-
-.email-field {
-    margin-left: 0;
 }
 
 footer {
