--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,39 +107,27 @@ h1, h2 {
     text-align: center;
 }
 
-.site-information {
+.site-information-container {
+    display: flex;
     width: 33%;
-    margin: 0 auto;
-    margin-top: 2%;
+    padding-left: 17%;
+}
+
+.site-information-container2 {
+    display: flex;
+    width: 33%;
+    padding-left: 17%;
+}
+
+.site-information-container3 {
+    display: flex;
+    width: 33%;
+    padding-left: 33%;
 }
 
 .site-h2-underline {
     border-top: 1px solid 	#000000;
     width: 100%;
-}
-
-#pyramid-image {
-    position: absolute;
-    left: 0px;
-    top: 825px
-}
-
-#colosseum-image {
-    position: absolute;
-    right: 0px;
-    top: 1000px
-}
-
-#terracotta-image {
-    position: absolute;
-    left: 0px;
-    top: 1240px
-}
-
-#easter-image {
-    position: absolute;
-    right: 0px;
-    top: 1413px
 }
 
 #form-section {
